Implement gRPC for Verdict; Implement Repo methods for Verdict
