# swagger/ocp-verdict-api.swagger.json
@@ -69,7 +69,7 @@
         ]
       }
     },
-    "/v1/verdicts/{verdict_id}": {
+    "/v1/verdicts/{solution_id}": {
       "get": {
         "operationId": "OcpVerdictApi_UpdateVerdictV1",
         "responses": {
@@ -88,7 +88,7 @@
         },
         "parameters": [
           {
-            "name": "verdict_id",
+            "name": "solution_id",
             "in": "path",
             "required": true,
             "type": "string",
@@ -145,7 +145,7 @@
         },
         "parameters": [
           {
-            "name": "verdict_id",
+            "name": "solution_id",
             "in": "path",
             "required": true,
             "type": "string",
@@ -193,7 +193,7 @@
     "apiRemoveVerdictV1Response": {
       "type": "object",
       "properties": {
-        "found": {
+        "success": {
           "type": "boolean"
         }
       }
@@ -201,8 +201,8 @@
     "apiUpdateVerdictV1Response": {
       "type": "object",
       "properties": {
-        "verdict": {
-          "$ref": "#/definitions/apiVerdict"
+        "success": {
+          "type": "boolean"
         }
       }
     },
